--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,7 @@
     <main class="page">
     {{content}}
     <main>
-    <h1 class="page-title">Leafs</h1>
+    <h1 class="page-title">Current Insights</h1>
     <main class="post-list">
       {% for post in site.posts %}
       <a href="{{site.url}}{{site.baseurl}}{{post.url}}" class="post">
